@@ -579,7 +579,7 @@ function load_inventory() {
 }
 
 function add_empty_wishlist_button() {
-	var profile = $(".playerAvatar a")[0].href.replace("http://steamcommunity.com", "");
+	var profile = $(".playerAvatar a")[0].href.replace("http://steamcommunity.com", "");	
 	if (window.location.pathname.startsWith(profile)) {
 		var empty_button = $("<div class='btn_save' style='border-color:red; width: auto;'>&nbsp;&nbsp;<a>" + localized_strings[language].empty_wishlist + "</a>&nbsp;&nbsp;</div>");
 		empty_button.click(empty_wishlist);
@@ -2702,6 +2702,46 @@ function totalsize() {
 	$(".clientConnChangingText").before("<p class='clientConnHeaderText'>" + localized_strings[language].total_size + ":</p><p class='clientConnMachineText'>" +total + " GiB</p>");
 }
 
+function add_gamelist_achievements() {
+	storage.get(function(settings) {
+		if (settings.showallachievements === undefined) { settings.showallachievements = true; storage.set({'showallachievements': settings.showallachievements}); }
+		if (settings.showallachievements) {
+			// Get the logged in user's name and the name of the user who's list you're browsing
+			var profile = $(".playerAvatar a")[0].href.replace("http://steamcommunity.com/id/", "");			
+			var username = $(".profile_small_header_name").text();			
+			// Only display on your own game list
+			if (profile == username) {			
+				// Only show stats on the "All Games" tab
+				if (window.location.href.match(/\/games\?tab=all/)) {
+					$(".gameListRow").each(function(index, value) {
+						var appid = get_appid_wishlist(value.id);
+						$(value).find(".bottom_controls").find("img").each(function () {			
+							// Get only items with achievements
+							if ($(this).attr("src").indexOf("http://cdn.steamcommunity.com/public/images/skin_1/ico_stats.gif") == 0) {				
+								// Get only items with play time
+								if (!($(value).html().match(/<h5><\/h5>/))) {
+									// Copy achievement stats to row
+									$(value).find(".gameListRowItemName").append("<div class='recentAchievements' id='es_app_" + appid + "' style='padding-top: 14px; padding-right: 4px; width: 205px; float: right; font-size: 10px; font-weight: normal;'>"); 
+									$("#es_app_" + appid).load('http://steamcommunity.com/id/' + username + '/stats/' + appid + ' #topSummaryAchievements', function(response, status, xhr) {						
+										var BarFull = $("#es_app_" + appid).html().match(/achieveBarFull\.gif" width="([0-9]|[1-9][0-9]|[1-9][0-9][0-9])" height="12"/)[1];
+										var BarEmpty = $("#es_app_" + appid).html().match(/achieveBarEmpty\.gif" width="([0-9]|[1-9][0-9]|[1-9][0-9][0-9])" height="12"/)[1];
+										BarFull = BarFull * .58;
+										BarEmpty = BarEmpty * .58;
+										var html = $("#es_app_" + appid).html();
+										html = html.replace(/achieveBarFull\.gif" width="([0-9]|[1-9][0-9]|[1-9][0-9][0-9])"/, "achieveBarFull.gif\" width=\"" + BarFull.toString() + "\"");
+										html = html.replace(/achieveBarEmpty\.gif" width="([0-9]|[1-9][0-9]|[1-9][0-9][0-9])"/, "achieveBarEmpty.gif\" width=\"" + BarEmpty.toString() + "\"");
+										html = html.replace("::", ":");
+										$("#es_app_" + appid).html(html);
+									});	
+								}
+							}
+						});
+					});
+				}
+			}
+		}
+	});
+}
 
 function get_gamecard(t) {
 	if (t && t.match(/(?:id|profiles)\/.+\/gamecards\/(\d+)/)) return RegExp.$1;
@@ -2906,6 +2946,7 @@ $(document).ready(function(){
 
 					case /^\/(?:id|profiles)\/(.+)\/games/.test(window.location.pathname):
 						totalsize();
+						add_gamelist_achievements();
 						break;
 
 					case /^\/(?:id|profiles)\/.+\/badges/.test(window.location.pathname):
