@@ -547,6 +547,15 @@
 					<div id="es_background_text" class="text">Set Custom Background on Edit Profile Screen</div>
 				</td>
 			</tr>
+			
+			<tr>
+				<td>
+					<input type="checkbox" id="showallachievements">
+				</td>
+				<td height=30>
+					<div id="allachievements_text" class="text">Show achievement stats on "All Games" page</div>
+				</td>
+			</tr>
 
 			<tr>
 				<td>
