@@ -4,6 +4,7 @@ v4.2
 + Adds support for Steam Workshop icon on app page linking to search page
 : Updated Italian, Russian, and Spanish translations
 + Adds HowLongToBeat information on the app page
++ Adds achievement stats to the "All games" list
 
 v4.1
 -----
